contact information has been changed in footer documents

--- a/index.html
+++ b/index.html
@@ -860,13 +860,13 @@
                             </div>
                             <div class="office_location">
                                 <div class="address">
-                                    <i class="fa fa-map-marker"><span>Elephant Road, Dhaka 1205, Bangladesh</span></i>
+                                    <i class="fa fa-map-marker"><span>Bridge Colony Lahore Cant</span></i>
                                 </div>
                                 <div class="phone">
-                                    <i class="fa fa-phone"><span>+ 8801532-987039</span></i>
+                                    <i class="fa fa-phone"><span>+ 003216825968</span></i>
                                 </div>
                                 <div class="email">
-                                    <i class="fa fa-envelope"><span>youremail@mail.com</span></i>
+                                    <i class="fa fa-envelope"><span>aamir.bwp@gmail.com</span></i>
                                 </div>
                                 <div id="map"></div>
                             </div>
@@ -925,7 +925,7 @@
                     </div>
                     <div class="col-md-6">
                         <div class="designer">
-                            <p>A Design By <a href="#">XpeedStudio</a></p>
+                            <p>A Design By <a href="#">Xeven Solution</a></p>
                         </div>
                     </div>
                 </div>
