home page is added on Greenfair Branch

--- a/home.html
+++ b/home.html
@@ -56,7 +56,7 @@
                             <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 zero_mp">
                                 <div class="phone">
                                     <i class="fa fa-phone floatleft"></i>
-                                    <p>+ 8801532-987039</p>
+                                    <p>Phone Number</p>
                                 </div>
                             </div>
                             <!--End of col-md-4-->
