--- a/home.html
+++ b/home.html
@@ -920,7 +920,7 @@
                 <div class="row text-center">
                     <div class="col-md-6">
                         <div class="copyright">
-                            <p>@ 2016 - Design By <span><a href="">&#9798;</a></span></p>
+                            <p>Design By <span><a href="">&#9798;</a></span></p>
                         </div>
                     </div>
                     <div class="col-md-6">
