Design By text changed..

--- a/home.html
+++ b/home.html
@@ -925,7 +925,7 @@
                     </div>
                     <div class="col-md-6">
                         <div class="designer">
-                            <p>A Design By <a href="#">Xeven Solution</a></p>
+                            <p>A Design By Text change<a href="#">Xeven Solution</a></p>
                         </div>
                     </div>
                 </div>
