Some of My test has been updated

--- a/home.html
+++ b/home.html
@@ -263,14 +263,14 @@
                 <div class="row vol_area">
                     <div class="col-md-8">
                         <div class="volunteer_content">
-                            <h3>Become a <span>Volunteer</span></h3>
-                            <p>Join Our Team And Help the world. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur.</p>
+                            <h3>Become a <span>Sports Man Ohh aahhhhh</span></h3>
+                            <p>This is going well done Aamir Join Our Team And Help the world. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur.</p>
                         </div>
                     </div>
                     <!--End of col-md-8-->
                     <div class="col-md-3 col-md-offset-1">
                         <div class="join_us">
-                            <a href="" class="vol_cust_btn">join us</a>
+                            <a href="" class="vol_cust_btn">Join Us Tab/a>
                         </div>
                     </div>
                     <!--End of col-md-3-->
@@ -287,8 +287,8 @@
         <section id="portfolio" class="text-center">
             <div class="col-md-12">
                 <div class="portfolio_title">
-                    <h2>our latest work</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet consectetur adipiscing elit.</p>
+                    <h2>Our Latest Project List is here.</h2>
+                    <p>Lipiscing elit. Lorem ipsum dolor sit amet consectetur adipiscing elit.</p>
                 </div>
             </div>
             <!--End of col-md-2-->
@@ -381,7 +381,7 @@
                     <div class="row">
                         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                             <div class="counter_header">
-                                <h2>OUR achivement</h2>
+                                <h2>OUR achievement</h2>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                             </div>
                         </div>
